force-app/main/default/objects/HDT_TableauIntegrationSettings__mdt/HDT_TableauIntegrationSettings__mdt.object-meta.xml
<CustomObject>
    <description>Tableau integration setting</description>
    <label>Tableau integration setting</label>
    <pluralLabel>Tableau integration settings</pluralLabel>
</CustomObject>