force-app/main/default/objects/HDT_TableauIntegrationSettings__mdt/fields/DatasetApiName__c.field-meta.xml
<CustomField>
    <fullName>DatasetApiName__c</fullName>
    <description>Api Name dei Dataset di Tableau</description>
    <label>DatasetApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>