force-app/main/default/objects/HDT_TableauIntegrationSettings__mdt/fields/JSONDataset__c.field-meta.xml
<CustomField>
    <fullName>JSONDataset__c</fullName>
    <description>JSON sorgenti dei Dataset</description>
    <label>JSONDataset</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>