force-app/main/default/objects/HDT_TableauIntegrationSettings__mdt/fields/JSONDatasetBase64__c.field-meta.xml
<CustomField>
    <fullName>JSONDatasetBase64__c</fullName>
    <description>JSON dei dataset convertiti esternamente in Base 64</description>
    <label>JSONDatasetBase64</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>